# DAFx24-room-acoustics-tutorial

./: .gitmodules  README.md  pyproject.toml
resources/KEMAR/KEMAR_Knowl_EarSim_SmallEars/HRTF/HRTF/48kHz/: KEMAR_Knowl_EarSim_SmallEars_FreeFieldComp_48kHz.sofa
src/notebooks/: Binaural FDN example.ipynb  FDN with frequency-dependent T60.ipynb  Hybrid IS-FDN.ipynb
src/pyFDN/: absorption_filter.py  delay_line.py  fdn.py  feedback_matrix.py  filter_fitting.py  sofa_parser.py  utils.py
